# gasandbox

./: lib_win32_readme.txt
ga_sandbox/: AUTHORS  ChangeLog  MACOSX  Makefile  Makefile.am  Makefile.in  README  REQUIRED_LIBRARIES  SOLARIS  aclocal.m4  config.status  configure  configure.ac  depcomp  install-sh  lib_win32_readme.txt  lib_win64_readme.txt  missing  release_win32_exec.bat  release_win32_includes.bat  release_win32_libraries.bat  todo.txt  user_manual.txt
ga_sandbox/_vs2005/: Makefile.am  all.sln  chap11ex2.vcproj  chap12ex1.vcproj  chap12ex3.vcproj  chap13ex1.vcproj  chap14ex3.vcproj  chap14ex4.vcproj  chap15ex2.vcproj  chap16ex3.vcproj  chap16ex4.vcproj  chap1ex1.vcproj  chap2ex1.vcproj  chap2ex2.vcproj  chap2ex3.vcproj  chap3ex1.vcproj  chap3ex2.vcproj  chap3ex3.vcproj  chap3ex4.vcproj  chap4ex1.sln  chap4ex1.vcproj  chap4ex2.sln  chap4ex2.vcproj  chap4ex3.sln  chap4ex3.vcproj  chap5ex2.vcproj  chap5ex3.vcproj  chap6ex1.vcproj  chap7ex3.vcproj  libgasandbox.vcproj  libgasandboxparse.vcproj  qhull.vcproj
ga_sandbox/aclocal/: ax_check_gl.m4  ax_check_glu.m4  ax_check_glut.m4  mdl_have_opengl.m4
ga_sandbox/attic/: Makefile  Makefile.am  Makefile.in
ga_sandbox/attic/gaigen2hp/: Makefile  Makefile.am  main.cpp  (+6 more)
ga_sandbox/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3
ga_sandbox/chap1/: Makefile  Makefile.in
ga_sandbox/chap10/: Makefile  Makefile.in
ga_sandbox/chap11/: Makefile  Makefile.am  Makefile.in
ga_sandbox/chap12/: Makefile  Makefile.in
ga_sandbox/chap13/: Makefile  Makefile.am  Makefile.in
ga_sandbox/chap14/: Makefile  Makefile.am  Makefile.in
ga_sandbox/chap15/: Makefile  Makefile.in
ga_sandbox/chap16/: Makefile  Makefile.in  OpenGLMatrixToVersor.cpp
ga_sandbox/chap2/: Makefile  Makefile.am  Makefile.in
ga_sandbox/chap3/: Makefile  Makefile.in
ga_sandbox/chap4/: Makefile  Makefile.in
ga_sandbox/chap5/: Makefile  Makefile.in
ga_sandbox/chap6/: Makefile  Makefile.am  Makefile.in
ga_sandbox/chap7/: Makefile  Makefile.am  Makefile.in
ga_sandbox/chap8/: Makefile  Makefile.in
ga_sandbox/ext_include/: Makefile.in  README.txt
ga_sandbox/extra.m4/: fltk.m4  opengl.m4
ga_sandbox/lib_win32/: Makefile.am  Makefile.in  README.txt
ga_sandbox/lib_win64/: README.txt
ga_sandbox/libgasandbox/: Makefile  Makefile.am  Makefile.in  a.bat  c2ga.cpp  c2ga.gp2  c2ga.gs2  c2ga.h  c2ga_draw.cpp  c2ga_draw.h  c2ga_fast_factor_meet_join.cpp  c2ga_lexer.g  c2ga_mv_lexer.cpp  c2ga_mv_lexer.hpp  c2ga_mv_lexerTokenTypes.hpp  c2ga_mv_lexerTokenTypes.txt  c2ga_mv_parser.cpp  c2ga_mv_parser.hpp  c2ga_mv_parserTokenTypes.hpp  c2ga_mv_parserTokenTypes.txt  c2ga_parse.cpp  c2ga_parse.h  c2ga_parser.g  c2ga_util.h  c2gatoc3ga.cpp  c2gatoc3ga.h  c3ga.cpp  c3ga.gp2  c3ga.gs2  c3ga.h  c3ga_draw.cpp  c3ga_draw.h  c3ga_fast_factor_meet_join.cpp  c3ga_lexer.g  c3ga_mv_lexer.cpp  c3ga_mv_lexer.hpp  c3ga_mv_lexerTokenTypes.hpp  c3ga_mv_lexerTokenTypes.txt  c3ga_mv_parser.cpp  c3ga_mv_parser.hpp  (+90 more)
ga_sandbox/libgasandbox_no_opt/: Makefile.am  Makefile.in  c2ga.cpp  c2ga.h  c3ga.cpp  c3ga.gs2  c3ga.h  e2ga.cpp  e2ga.gs2  e2ga.h  e3ga.cpp  e3ga.h  h3ga.cpp  h3ga.h  readme.txt
ga_sandbox/m4/: check_for_file.txt
ga_sandbox/qhull-2003.1/: Makefile  Makefile.am  Makefile.in  config.status  libtool
ga_sandbox/screenshots/: Makefile.am  Makefile.in
ga_sandbox/solutions/: Makefile  Makefile.am  Makefile.in
ga_sandbox/vs.net/: Makefile  Makefile.am  Makefile.in  all.ncb  all.sln  chap10ex1.vcproj  chap10ex2.vcproj  chap10ex3.vcproj  chap11ex1.vcproj  chap11ex2.vcproj  chap11ex3.vcproj  chap11ex4.vcproj  chap11ex5.vcproj  chap11ex6.vcproj  chap12ex1.vcproj  chap12ex2.vcproj  chap12ex3.vcproj  chap13ex1.vcproj  chap13ex2.vcproj  chap13ex3.vcproj  chap13ex4.vcproj  chap14ex1.vcproj  chap14ex3.vcproj  chap14ex4.vcproj  chap15ex1.vcproj  chap15ex2.vcproj  chap15ex3.vcproj  chap16ex1.vcproj  chap16ex2.vcproj  chap16ex3.vcproj  chap16ex4.vcproj  chap1ex1.vcproj  chap2ex1.vcproj  chap2ex2.vcproj  chap2ex3.vcproj  chap2ex3g2.vcproj  chap3ex1.vcproj  chap3ex2.vcproj  chap3ex3.vcproj  chap3ex4.vcproj  (+17 more)
ga_sandbox/vs2005/: Makefile.am  Makefile.in  all.sln  chap10ex1.vcproj  chap10ex2.vcproj  chap10ex3.vcproj  chap11ex1.vcproj  chap11ex2.vcproj  chap11ex3.vcproj  chap11ex4.vcproj  chap12ex1.vcproj  chap12ex2.vcproj  chap12ex3.vcproj  chap13ex1.vcproj  chap13ex2.vcproj  chap13ex3.vcproj  chap13ex4.vcproj  chap14ex1.vcproj  chap14ex2.vcproj  chap14ex3.vcproj  chap14ex4.vcproj  chap15ex1.vcproj  chap15ex2.vcproj  chap15ex3.vcproj  chap16ex1.vcproj  chap16ex2.vcproj  chap16ex3.vcproj  chap16ex4.vcproj  chap1ex1.vcproj  chap2ex1.vcproj  chap2ex2.vcproj  chap2ex3.vcproj  chap3ex1.vcproj  chap3ex2.vcproj  chap3ex3.vcproj  chap3ex4.vcproj  chap4ex1.vcproj  chap4ex2.vcproj  chap4ex3.vcproj  chap5ex1.vcproj  (+17 more)
ga_sandbox/vs2005.old/: _temp.sln  chap10ex3.vcproj  chap11ex1.vcproj  chap12ex2.vcproj  chap13ex2.vcproj  chap13ex3.vcproj  chap13ex4.vcproj  chap14ex1.vcproj  chap14ex2.vcproj  chap14ex3.vcproj  chap15ex2.vcproj  chap15ex3.vcproj  chap16ex2.vcproj  chap16ex3.vcproj  chap16ex4.vcproj  chap2ex1.vcproj  chap2ex2.vcproj  chap2ex3.vcproj  chap4ex3.vcproj  chap6ex2.vcproj  chap7ex1.vcproj  chap7ex2.vcproj  chap7ex3.vcproj  libgasandbox.vcproj  libgasandboxparse.vcproj
ga_sandbox/vs2008/: Makefile.in  all.sln  chap10ex1.vcproj  chap10ex2.vcproj  chap10ex3.vcproj  chap11ex1.vcproj  chap11ex2.vcproj  chap11ex3.vcproj  chap11ex4.vcproj  chap12ex1.vcproj  chap12ex2.vcproj  chap12ex3.vcproj  chap13ex1.vcproj  chap13ex2.vcproj  chap13ex3.vcproj  chap13ex4.vcproj  chap14ex1.vcproj  chap14ex2.vcproj  chap14ex3.vcproj  chap14ex4.vcproj  chap15ex1.vcproj  chap15ex2.vcproj  chap15ex3.vcproj  chap16ex1.vcproj  chap16ex2.vcproj  chap16ex3.vcproj  chap16ex4.vcproj  chap1ex1.vcproj  chap2ex1.vcproj  chap2ex2.vcproj  chap2ex3.vcproj  chap3ex1.vcproj  chap3ex2.vcproj  chap3ex3.vcproj  chap3ex4.vcproj  chap4ex1.vcproj  chap4ex2.vcproj  chap4ex3.vcproj  chap5ex1.vcproj  chap5ex2.vcproj  (+16 more)
ga_sandbox/xcode/: Makefile  Makefile.am  Makefile.in
(+491 files in other folders)
