SUBDIRS = qhull-2003.1 libgasandbox \
	chap1 chap2 chap3 chap4 chap5 chap6 chap7 chap8 \
	chap10 chap11 chap12 chap13 chap14 chap15 chap16 \
	solutions vs.net vs2005 vs2008 attic screenshots \
	libgasandbox_no_opt ext_include lib_win32 xcode


EXTRA_DIST = REQUIRED_LIBRARIES SOLARIS MACOSX user_manual.txt
