dnl Process this file with autoconf to produce a configure script.
AC_INIT()
AM_INIT_AUTOMAKE(ga_sandbox, 1.0)
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB
MDL_HAVE_OPENGL
AQSIS_CHECK_FLTK
AC_OUTPUT(
	Makefile \
	vs.net/Makefile \
	\
	libgasandbox/Makefile \
	\
	chap2/Makefile \
	chap2/ex1/Makefile\
	chap2/ex2/Makefile\
	chap2/ex3/Makefile\
	\
	chap3/Makefile \
	chap3/ex1/Makefile\
	chap3/ex2/Makefile\
	chap3/ex3/Makefile\
	chap3/ex4/Makefile\
	\
	chap4/Makefile \
	chap4/ex1/Makefile \
	chap4/ex2/Makefile \
	chap4/ex3/Makefile \
	\
	chap5/Makefile \
	chap5/ex1/Makefile \
	chap5/ex2/Makefile \
	chap5/ex3/Makefile \
	\
	chap6/Makefile \
	chap6/ex1/Makefile \
	chap6/ex2/Makefile \
	chap6/ex3/Makefile \
	\
	chap7/Makefile \
	chap7/ex1/Makefile \
	chap7/ex2/Makefile \
	chap7/ex3/Makefile \
	chap7/ex4/Makefile \
	\
	solutions/Makefile \
	\
	solutions/chap2/Makefile \
	solutions/chap2/ex2/Makefile \
	\
	solutions/chap3/Makefile \
	solutions/chap3/ex2/Makefile \
	\
	solutions/chap6/Makefile \
	solutions/chap6/ex1/Makefile \
	solutions/chap6/ex3/Makefile \
	\
	solutions/chap7/Makefile \
	solutions/chap7/ex4/Makefile \
	\
	solutions/vs.net/Makefile \
	\
	attic/Makefile\
	attic/gaigen2hp/Makefile
	)
