EXTRA_DIST = \
	chap2ex1_screenshot.png \
	chap2ex3_screenshot.png \
	chap3ex1_screenshot.png \
	chap3ex4_screenshot.png \
	chap4ex1_screenshot.png \
	chap4ex3_screenshot.png \
	chap7ex2_screenshot.png \
	chap7ex5_screenshot.png \
        chap10ex3_screenshot.png \
        chap14ex2_screenshot.png \
        chap15ex2_screenshot.png


