EXTRA_DIST = \
	all.sln all.suo \
	libgasandbox.vcproj libgasandboxparse.vcproj \
	chap1ex1.vcproj \
	chap2ex1.vcproj chap2ex2.vcproj chap2ex3.vcproj \
	chap3ex1.vcproj chap3ex2.vcproj chap3ex3.vcproj chap3ex4.vcproj \
	chap4ex1.vcproj chap4ex2.vcproj chap4ex3.vcproj \
	chap5ex1.vcproj chap5ex2.vcproj chap5ex3.vcproj \
	chap6ex1.vcproj chap6ex2.vcproj \
	chap7ex1.vcproj chap7ex2.vcproj chap7ex3.vcproj chap7ex4.vcproj  chap7ex5.vcproj \
	chap10ex1.vcproj chap10ex2.vcproj chap10ex3.vcproj \
	chap11ex1.vcproj chap11ex2.vcproj chap11ex3.vcproj chap11ex4.vcproj \
	chap12ex1.vcproj chap12ex2.vcproj chap12ex3.vcproj \
	chap13ex1.vcproj chap13ex2.vcproj chap13ex3.vcproj chap13ex4.vcproj \
	chap14ex1.vcproj chap14ex2.vcproj chap14ex3.vcproj chap14ex4.vcproj \
	chap15ex1.vcproj chap15ex2.vcproj chap15ex3.vcproj \
	chap16ex1.vcproj chap16ex2.vcproj chap16ex3.vcproj chap16ex4.vcproj \
	gaigen2hp.vcproj


