EXTRA_DIST = qh--4d.gif    qh-faq.htm    qh-opto.htm   qhull.htm     rbox.man \
	qh--cone.gif  qh-get.htm    qh-optp.htm   qhull.man     rbox.txt \
	qh--dt.gif    qh-impre.htm  qh-optq.htm   qhull.txt \
	index.htm     qh--geom.gif  qh-in.htm     qh-optt.htm   qvoron_f.htm \
	qconvex.htm   qh--half.gif  qh-optc.htm   qh-quick.htm  qvoronoi.htm \
	qdelau_f.htm  qh--rand.gif  qh-optf.htm   qhalf.htm     rbox.1 \
	qdelaun.htm   qh-eg.htm     qh-optg.htm   qhull.1       rbox.htm
