lib_LIBRARIES = libqhull.a 

libqhull_a_includedir       = $(includedir)/qhull

libqhull_a_include_HEADERS = \
	geom.h \
	io.h \
	mem.h \
	merge.h \
	poly.h \
	qhull.h \
	qhull_a.h \
	qset.h \
	stat.h \
	user.h


libqhull_a_SOURCES =  \
	geom.c\
				geom2.c\
				global.c\
				io.c\
				mem.c\
				merge.c\
				poly.c\
				poly2.c\
				qhull.c\
				qset.c\
				stat.c\
				user.c
